Fixed Content shift on tab change

--- a/src/pages/login/login.page.scss
+++ b/src/pages/login/login.page.scss
@@ -157,7 +157,6 @@ ion-button.bg-red {
   ion-button {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
 
     justify-content: flex-start;
 
